# beanquest

./: .gitignore  README.md  fly.toml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
beanquest/: api.py  application.py  db.py  errors.py
beanquest/models/: __init__.py  brewing_method.py  past_log.py  roasting_method.py
docker/beanquest/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  constants.ts  main.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: AppHeader.tsx  BrewingMethodDeleteDialog.test.tsx  BrewingMethodDeleteDialog.tsx  BrewingMethodDetail.test.tsx  BrewingMethodDetail.tsx  BrewingMethodEntry.test.tsx  BrewingMethodEntry.tsx  BrewingMethodForm.test.tsx  BrewingMethodForm.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  FilterSheet.tsx  LogDetail.test.tsx  LogDetail.tsx  LogEntry.tsx  LogForm.test.tsx  LogForm.tsx  NavDrawer.tsx  RoastingMethodDeleteDialog.test.tsx  RoastingMethodDeleteDialog.tsx  RoastingMethodDetail.test.tsx  RoastingMethodDetail.tsx  RoastingMethodEntry.test.tsx  RoastingMethodEntry.tsx  RoastingMethodForm.test.tsx  RoastingMethodForm.tsx  SortSheet.tsx  Stars.tsx
frontend/src/hooks/: useScrolled.ts  useWideLayout.ts
frontend/src/logic/: brewingMethods.test.ts  brewingMethods.ts  logs.test.ts  logs.ts  roastingMethods.test.ts  (+1 more)
migrations/: 0001.initial-schema.sql
tests/: conftest.py  test_api.py  test_application.py  test_db.py  test_errors.py  test_models.py
(+6 files in other folders)
