[project]
name = "beanquest"
version = "0.1.0"
description = "Coffee sourcing, roasting, and extraction tracking"
authors = [
    { name = "Peter Han", email = "peter@ketch.com" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pycodestyle (>=2.14.0,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
]
